docs/requirements/0.4.0/REQUIREMENTS.md

Requirements Summary
====================

# default

## As a user, I want the API to be schema.org compliant ([#45](https://github.com/NASA-PDS/pds-api/issues/45)) 


This requirement is not impacted by the current version
## As a user, I want to be able to access documentation associated to a product description ([#48](https://github.com/NASA-PDS/pds-api/issues/48)) 


This requirement is not impacted by the current version
## As a developer, I want a continuous deployment of the API available for testing ([#51](https://github.com/NASA-PDS/pds-api/issues/51)) 


This requirement is not impacted by the current version
## As an API user, I want to perform a search using wildcards ([#54](https://github.com/NASA-PDS/pds-api/issues/54)) 


This requirement is not impacted by the current version
## As an API user, I want to search for secondary collections that belong to a bundle. ([#55](https://github.com/NASA-PDS/pds-api/issues/55)) 


This requirement is not impacted by the current version
## As an API user, I want to know the children and ancestors of bundle, collections, and products ([#56](https://github.com/NASA-PDS/pds-api/issues/56)) 


This requirement is not impacted by the current version
## As an API user, I want to know the Collection(s) that belong to a given Bundle. ([#57](https://github.com/NASA-PDS/pds-api/issues/57)) 


This requirement is not impacted by the current version
## As an API user, I want to know the Product(s) that belong to a given Collection. ([#58](https://github.com/NASA-PDS/pds-api/issues/58)) 


This requirement is not impacted by the current version
## As an API user, I want to know the Product(s) that belong to a given Bundle. ([#59](https://github.com/NASA-PDS/pds-api/issues/59)) 


This requirement is not impacted by the current version
## As an API user, I want to know the Bundle for a given Product. ([#60](https://github.com/NASA-PDS/pds-api/issues/60)) 


This requirement is not impacted by the current version
## As an API user, I want to know the Collection(s) for a given Product. ([#61](https://github.com/NASA-PDS/pds-api/issues/61)) 


This requirement is not impacted by the current version
## As an API user, I want to know the Bundle for a given Collection. ([#62](https://github.com/NASA-PDS/pds-api/issues/62)) 


This requirement is not impacted by the current version
## As an API user, I want to be able to use wildcard search with `like` operator when apply filter queries ([#63](https://github.com/NASA-PDS/pds-api/issues/63)) 


This requirement is not impacted by the current version
## As a user, when I request specific fields I want to get records which have at least one of these fields ([#64](https://github.com/NASA-PDS/pds-api/issues/64)) 


This requirement is not impacted by the current version
## As an API user, I want to get only the fields I explicitly requested ([#65](https://github.com/NASA-PDS/pds-api/issues/65)) 


This requirement is not impacted by the current version
## As an API user, I want to get an XML response ([#66](https://github.com/NASA-PDS/pds-api/issues/66)) 


This requirement is not impacted by the current version
## As an API user, I want to access supplemental metadata from Product_Metadata_Supplemental. ([#67](https://github.com/NASA-PDS/pds-api/issues/67)) 


This requirement is not impacted by the current version
## As an API user, I want to know in the response how many hits are returned for an API query. ([#68](https://github.com/NASA-PDS/pds-api/issues/68)) 


This requirement is not impacted by the current version
## As a API user, I want the API to be idempotent. ([#69](https://github.com/NASA-PDS/pds-api/issues/69)) 


This requirement is not impacted by the current version
## As an API user, I want to know the unique values for a specific API field. ([#70](https://github.com/NASA-PDS/pds-api/issues/70)) 


This requirement is not impacted by the current version
## As a user, I want to do a complex query to the API without being limited by the length of the url request ([#71](https://github.com/NASA-PDS/pds-api/issues/71)) 


This requirement is not impacted by the current version
## As an API user, I want to search by a temporal range as an ISO-8601 time interval. ([#72](https://github.com/NASA-PDS/pds-api/issues/72)) 


This requirement is not impacted by the current version
## As an API user, I want to specify whether I get the latest or all versions of a product ([#74](https://github.com/NASA-PDS/pds-api/issues/74)) 


This requirement is not impacted by the current version
## As a developer, I never want the label blob to be returned ([#80](https://github.com/NASA-PDS/pds-api/issues/80)) 


This requirement is not impacted by the current version
## As an API user, I want to perform a free text search. ([#82](https://github.com/NASA-PDS/pds-api/issues/82)) 


This requirement is not impacted by the current version
## As an API user, I want to search using URL parameters ([#83](https://github.com/NASA-PDS/pds-api/issues/83)) 


This requirement is not impacted by the current version
## As a user,I want to get the list of properties available in summary sorted in alphabetical order ([#88](https://github.com/NASA-PDS/pds-api/issues/88)) 


This requirement is not impacted by the current version
## As a user, I want to know the DOI associated with a product through the API metadata ([#89](https://github.com/NASA-PDS/pds-api/issues/89)) 


This requirement is not impacted by the current version
## As an API user, I want to search for registered supplemental metadata ingested from external data sources ([#90](https://github.com/NASA-PDS/pds-api/issues/90)) 


This requirement is not impacted by the current version
## As a user, I want to use natural language search for PDS data ([#93](https://github.com/NASA-PDS/pds-api/issues/93)) 


This requirement is not impacted by the current version
## As a user, I want an end-point of each of the PDS4 IM classes of products ([#94](https://github.com/NASA-PDS/pds-api/issues/94)) 


This requirement is not impacted by the current version
## As a user, I want to query for all versions of a product ([#95](https://github.com/NASA-PDS/pds-api/issues/95)) 


This requirement is not impacted by the current version
## As an API user, I want to get the latest version of a product, by default ([#96](https://github.com/NASA-PDS/pds-api/issues/96)) 


This requirement is not impacted by the current version
## As an API user, I want to be able to use the API for free text search ([#99](https://github.com/NASA-PDS/pds-api/issues/99)) 


This requirement is not impacted by the current version
## As a user, I want to receive a JSON response that contains the PDS4 label metadata in JSON format (application/vnd.nasa.pds.pds4+json) ([#101](https://github.com/NASA-PDS/pds-api/issues/101)) 


This requirement is not impacted by the current version
## As a client developer, I want to have suggested searches for keyword search ([#102](https://github.com/NASA-PDS/pds-api/issues/102)) 


This requirement is not impacted by the current version
## As a client developer, I want to facet on 1 or more fields in the registry ([#103](https://github.com/NASA-PDS/pds-api/issues/103)) 


This requirement is not impacted by the current version
## As an API user, I want to know how long a request took to complete ([#105](https://github.com/NASA-PDS/pds-api/issues/105)) 


This requirement is not impacted by the current version
## As a API manager, I want to restrict access to registered products that should not be publicly accessible ([#106](https://github.com/NASA-PDS/pds-api/issues/106)) 


This requirement is not impacted by the current version
## As an API user, I want to explicitly request the latest version of a product ([#107](https://github.com/NASA-PDS/pds-api/issues/107)) 


This requirement is not impacted by the current version
## As a user, I want to clearly see which formats are accepted by the API when a 406 error is raised ([#127](https://github.com/NASA-PDS/pds-api/issues/127)) 


This requirement is not impacted by the current version
## As an user, I want to make requests using the PDAP protocol ([#109](https://github.com/NASA-PDS/pds-api/issues/109)) 


This requirement is not impacted by the current version
## As an API user, I want to receive a HTML response ([#118](https://github.com/NASA-PDS/pds-api/issues/118)) 


This requirement is not impacted by the current version
## As an API user, I want a CSV response format option ([#120](https://github.com/NASA-PDS/pds-api/issues/120)) 


This requirement is not impacted by the current version
## As a user, I want to receive a XML response that contains the PDS4 label metadata in XML format (application/vnd.nasa.pds.pds4+xml)  ([#125](https://github.com/NASA-PDS/pds-api/issues/125)) 


This requirement is not impacted by the current version
## Improve products/all endpoint to include all versions of all products ([#126](https://github.com/NASA-PDS/pds-api/issues/126)) 


This requirement is not impacted by the current version
## As an user, I want to make requests using the EPN-TAP protocol ([#128](https://github.com/NASA-PDS/pds-api/issues/128)) 


This requirement is not impacted by the current version
## As a user, I want to know when products queried through the API are off-line ([#131](https://github.com/NASA-PDS/pds-api/issues/131)) 


This requirement is not impacted by the current version
## As a user, I want to know how to parse a PDS4 attribute from the vnd.nasa.pds.pds4+json response format ([#132](https://github.com/NASA-PDS/pds-api/issues/132)) 


This requirement is not impacted by the current version
## As an API user, I want to get a key-value-pair JSON response ([#134](https://github.com/NASA-PDS/pds-api/issues/134)) 


This requirement is not impacted by the current version
## As a user, I want to see API stable release specifications ([#139](https://github.com/NASA-PDS/pds-api/issues/139)) 


This requirement is not impacted by the current version
## Add the x-total-count header in the API responses ([#144](https://github.com/NASA-PDS/pds-api/issues/144)) 


This requirement is not impacted by the current version
## As a user, I want to search for past versions of a product where the LID changed during the product history ([#148](https://github.com/NASA-PDS/pds-api/issues/148)) 


This requirement is not impacted by the current version
## As a user, I want to only return the latest version of a product that has changed logical identifiers in it's history ([#149](https://github.com/NASA-PDS/pds-api/issues/149)) 


This requirement is not impacted by the current version
## As a user, I want the API response media types to be compliant with RFC 6838 ([#152](https://github.com/NASA-PDS/pds-api/issues/152)) 


This requirement is not impacted by the current version
## As a user, I want to receive error messages when an invalid request is submitted to the API ([#153](https://github.com/NASA-PDS/pds-api/issues/153)) 


This requirement is not impacted by the current version
## As a user, I want to know which tools I can use with given datasets ([#160](https://github.com/NASA-PDS/pds-api/issues/160)) 


This requirement is not impacted by the current version
## As a user, I want to be able to reference the Search API using a DOI ([#162](https://github.com/NASA-PDS/pds-api/issues/162)) 


This requirement is not impacted by the current version
## As a user, I want to search for PDS software tools and services ([#165](https://github.com/NASA-PDS/pds-api/issues/165)) 


This requirement is not impacted by the current version
## As a user, I want to know which tools I can use for a specific planetary context (investigation, instrument, target, etc.) ([#166](https://github.com/NASA-PDS/pds-api/issues/166)) 


This requirement is not impacted by the current version
## As a user, I want to have a PDS Search API user guide ([#169](https://github.com/NASA-PDS/pds-api/issues/169)) 


This requirement is not impacted by the current version
## As a user, I want to be able to access restricted data sets through the API ([#170](https://github.com/NASA-PDS/pds-api/issues/170)) 


This requirement is not impacted by the current version
## As a user, I want to know how to query observational data only ([#175](https://github.com/NASA-PDS/pds-api/issues/175)) 


This requirement is not impacted by the current version
## As a user, I want to know all the products referenced by a particular product ([#176](https://github.com/NASA-PDS/pds-api/issues/176)) 


This requirement is not impacted by the current version
## As a user, I want to get directions whenever I arrive on an API URL ([#191](https://github.com/NASA-PDS/pds-api/issues/191)) 


This requirement is not impacted by the current version
## As a user, I want to be able to access the Search API Swagger interface from pds.nasa.gov ([#193](https://github.com/NASA-PDS/pds-api/issues/193)) 


This requirement is not impacted by the current version
## As a user, I want to get TBD response when results are not found. ([#198](https://github.com/NASA-PDS/pds-api/issues/198)) 


This requirement is not impacted by the current version
## As a user, I want to query only the latest versions of products unless explicitly requested ([#221](https://github.com/NASA-PDS/pds-api/issues/221)) 


This requirement is not impacted by the current version